refactor plugin list loading and use new JRE http client